Add a print button
Though redundant, it will present to the viewer that the website is print-friendly.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
       <div class="mx-4 overflow-hidden rounded-full">
         <img src="/css-resume/img/profile.jpg" />
       </div>
-      <h1 class="mt-8 pb-4 text-2xl">Christian Louise Aranas</h1>
+      <div class="mt-8 pb-4">
+        <h1 class="inline-block align-middle text-2xl">
+          <span>Christian Louise Aranas</span>
+        </h1>
+        <button
+          id="printButton"
+          class="inline-block select-none rounded bg-yellow-100 px-3 py-1 text-center align-middle text-sm text-yellow-700 shadow transition-all hover:shadow-lg active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none print:hidden"
+          type="button"
+        >
+          Save as PDF
+        </button>
+      </div>
       <div>
         <i class="me-2 inline-block h-full align-middle">
           <svg
