Replaced purple colors with blue variants

--- a/index.html
+++ b/index.html
@@ -185,32 +185,32 @@
       <h3 class="py-2">Javascript</h3>
       <div class="my-2 flex flex-wrap gap-2">
         <span
-          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+          class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
         >
           <p class="whitespace-nowrap text-sm">NodeJS</p>
         </span>
         <span
-          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+          class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
         >
           <p class="whitespace-nowrap text-sm">SolidJS</p>
         </span>
         <span
-          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+          class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
         >
           <p class="whitespace-nowrap text-sm">ReactJS</p>
         </span>
         <span
-          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+          class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
         >
           <p class="whitespace-nowrap text-sm">Express.js</p>
         </span>
         <span
-          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+          class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
         >
           <p class="whitespace-nowrap text-sm">Prisma ORM</p>
         </span>
         <span
-          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+          class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
         >
           <p class="whitespace-nowrap text-sm">11ty's WebC</p>
         </span>
@@ -218,7 +218,7 @@
       <h3 class="py-2">HTML/CSS</h3>
       <div class="flex flex-wrap gap-2">
         <span
-          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+          class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
         >
           <p class="whitespace-nowrap text-sm">TailwindCSS</p>
         </span>
@@ -226,12 +226,12 @@
       <h3 class="py-2">Android Kotlin</h3>
       <div class="flex flex-wrap gap-2">
         <span
-          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+          class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
         >
           <p class="whitespace-nowrap text-sm">Jetpack Compose</p>
         </span>
         <span
-          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+          class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
         >
           <p class="whitespace-nowrap text-sm">Room Persistence Database</p>
         </span>
@@ -239,7 +239,7 @@
       <h3 class="py-2">Dart</h3>
       <div class="flex flex-wrap gap-2">
         <span
-          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+          class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
         >
           <p class="whitespace-nowrap text-sm">Flutter</p>
         </span>
@@ -247,17 +247,17 @@
       <h3 class="py-2">SQL Databases</h3>
       <div class="flex flex-wrap gap-2">
         <span
-          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+          class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
         >
           <p class="whitespace-nowrap text-sm">MySQL</p>
         </span>
         <span
-          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+          class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
         >
           <p class="whitespace-nowrap text-sm">PostgreSQL</p>
         </span>
         <span
-          class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+          class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
         >
           <p class="whitespace-nowrap text-sm">SQLite</p>
         </span>
@@ -478,27 +478,27 @@
 
             <div class="flex flex-wrap gap-2">
               <span
-                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+                class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
                 <p class="whitespace-nowrap text-sm">NodeJS</p>
               </span>
               <span
-                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+                class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
                 <p class="whitespace-nowrap text-sm">Express</p>
               </span>
               <span
-                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+                class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
                 <p class="whitespace-nowrap text-sm">Prisma</p>
               </span>
               <span
-                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+                class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
                 <p class="whitespace-nowrap text-sm">React</p>
               </span>
               <span
-                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+                class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
                 <p class="whitespace-nowrap text-sm">Bootstrap</p>
               </span>
@@ -533,22 +533,22 @@
             </a>
             <div class="flex flex-wrap gap-2">
               <span
-                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+                class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
                 <p class="whitespace-nowrap text-sm">WebC for HTML</p>
               </span>
               <span
-                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+                class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
                 <p class="whitespace-nowrap text-sm">TailwindCSS</p>
               </span>
               <span
-                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+                class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
                 <p class="whitespace-nowrap text-sm">Pure JS</p>
               </span>
               <span
-                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+                class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
                 <p class="whitespace-nowrap text-sm">Web Components</p>
               </span>
@@ -593,22 +593,22 @@
             </a>
             <div class="my-2 flex flex-wrap gap-2">
               <span
-                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+                class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
                 <p class="whitespace-nowrap text-sm">Kotlin</p>
               </span>
               <span
-                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+                class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
                 <p class="whitespace-nowrap text-sm">Android Studio</p>
               </span>
               <span
-                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+                class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
                 <p class="whitespace-nowrap text-sm">Jetpack Compose</p>
               </span>
               <span
-                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+                class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
                 <p class="whitespace-nowrap text-sm">
                   Room Persistence Database
@@ -645,17 +645,17 @@
             </a>
             <div class="my-2 flex flex-wrap gap-2">
               <span
-                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+                class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
                 <p class="whitespace-nowrap text-sm">Dart</p>
               </span>
               <span
-                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+                class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
                 <p class="whitespace-nowrap text-sm">Flutter</p>
               </span>
               <span
-                class="inline-flex items-center justify-center rounded-full bg-purple-100 px-2.5 py-0.5 text-purple-700"
+                class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
                 <p class="whitespace-nowrap text-sm">SQL</p>
               </span>
