Added margin between print button and my name

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img src="/css-resume/img/profile.jpg" />
       </div>
       <div class="mt-8 pb-4">
-        <h1 class="inline-block align-middle text-2xl">
+        <h1 class="me-1 inline-block align-middle text-2xl">
           <span>Christian Louise Aranas</span>
         </h1>
         <button
