Changed color of project link ping

--- a/index.html
+++ b/index.html
@@ -453,10 +453,10 @@
         >
           <span class="absolute -right-4 flex h-3 w-3 print:hidden">
             <span
-              class="absolute inline-flex h-full w-full animate-ping rounded-full bg-sky-400 opacity-75"
+              class="absolute inline-flex h-full w-full animate-ping rounded-full bg-blue-400 opacity-75"
             ></span>
             <span
-              class="relative inline-flex h-3 w-3 rounded-full bg-sky-500"
+              class="relative inline-flex h-3 w-3 rounded-full bg-blue-500"
             ></span>
           </span>
           <i class="me-2 inline-block h-full align-middle">
