Hide github button on print

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body class="flex min-h-screen flex-col items-stretch gap-4 p-4 sm:flex-row">
     <a
       href="https://github.com/chrsrns/css-resume"
-      class="group/github-corner fixed right-0 top-0"
+      class="group/github-corner fixed right-0 top-0 print:hidden"
       aria-label="View source on GitHub"
       ><svg
         width="80"
