Changed color of the section icons

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
       class="flex-shrink-0 flex-grow-0 basis-full overflow-hidden rounded p-8 shadow-[0_4px_10px_0_rgba(0,0,0,0.2),0_4px_20px_0_rgba(0,0,0,0.19)] sm:flex-shrink sm:flex-grow-[2] sm:basis-0"
     >
       <h1 class="text-2xl">
-        <i class="me-2 inline-block h-full align-middle">
+        <i class="me-2 inline-block h-full align-middle text-yellow-600">
           <svg
             fill="currentColor"
             stroke-width="0"
@@ -391,7 +391,7 @@
         </p>
       </div>
       <h1 class="mt-8 text-2xl print:mt-4">
-        <i class="me-2 inline-block h-full align-middle">
+        <i class="me-2 inline-block h-full align-middle text-yellow-600">
           <svg
             fill="currentColor"
             stroke-width="0"
@@ -459,7 +459,7 @@
               class="relative inline-flex h-3 w-3 rounded-full bg-blue-500"
             ></span>
           </span>
-          <i class="me-2 inline-block h-full align-middle">
+          <i class="me-2 inline-block h-full align-middle text-yellow-600">
             <svg
               fill="currentColor"
               stroke-width="0"
