--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
               </p>
             </a>
 
-            <div class="flex flex-wrap gap-2">
+            <div class="mt-2 flex flex-wrap gap-2">
               <span
                 class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
@@ -562,7 +562,7 @@
                 Github Link: https://chrsrns.github.io/tailwind-infinix-website/
               </p>
             </a>
-            <div class="flex flex-wrap gap-2">
+            <div class="mt-2 flex flex-wrap gap-2">
               <span
                 class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
@@ -591,7 +591,7 @@
         <article class="group">
           <div class="px-4 pt-4 print:pt-2">
             <a href="https://github.com/chrsrns/codingencyclopedia">
-              <div class="my-2 gap-2">
+              <div class="gap-2">
                 <h3
                   class="inline-block text-lg font-medium text-gray-900 print:block"
                 >
@@ -622,7 +622,7 @@
                 </p>
               </div>
             </a>
-            <div class="my-2 flex flex-wrap gap-2">
+            <div class="mt-2 flex flex-wrap gap-2">
               <span
                 class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
@@ -674,7 +674,7 @@
                 Github Link: https://chrsrns.github.io/habit-tracker-flutter/
               </p>
             </a>
-            <div class="my-2 flex flex-wrap gap-2">
+            <div class="mt-2 flex flex-wrap gap-2">
               <span
                 class="inline-flex items-center justify-center rounded-full bg-blue-100 px-2.5 py-0.5 text-blue-700"
               >
