Changed some link texts

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                 Scheduler Website
               </h3>
               <p class="hidden text-sm print:block">
-                Github Link: https://schedule-website-demo.domcloud.dev/
+                Demo Link: https://schedule-website-demo.domcloud.dev/
               </p>
             </a>
 
@@ -559,7 +559,8 @@
                 InfiniX - A Gaming Blog Site
               </h3>
               <p class="hidden text-sm print:block">
-                Github Link: https://chrsrns.github.io/tailwind-infinix-website/
+                Github Demo Link:
+                https://chrsrns.github.io/tailwind-infinix-website/
               </p>
             </a>
             <div class="mt-2 flex flex-wrap gap-2">
@@ -671,7 +672,8 @@
                 CoHabit - Habit Tracking Application
               </h3>
               <p class="hidden text-sm print:block">
-                Github Link: https://chrsrns.github.io/habit-tracker-flutter/
+                Github Demo Link:
+                https://chrsrns.github.io/habit-tracker-flutter/
               </p>
             </a>
             <div class="mt-2 flex flex-wrap gap-2">
