--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
+    <title>Online Resume - Christian Louise Aranas</title>
     <link rel="stylesheet" href="css/style.css" />
     <meta name="description" content="" />
 
-    <meta property="og:title" content="" />
+    <meta
+      property="og:title"
+      content="Online Resume - Christian Louise Aranas"
+    />
     <meta property="og:type" content="" />
     <meta property="og:url" content="" />
     <meta property="og:image" content="" />
