Changed URL of scheduler website project

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
       <div class="glow-on-hover rounded-lg">
         <article class="group">
           <div class="px-4 pt-4 print:pt-2">
-            <a href="https://schedule-website-demo.domcloud.dev/">
+            <a href="https://scheduler-website.domcloud.dev">
               <h3 class="text-lg font-medium text-gray-900">
                 <svg
                   class="inline-block print:hidden"
@@ -506,7 +506,7 @@
                 Scheduler Website
               </h3>
               <p class="hidden text-sm print:block">
-                Demo Link: https://schedule-website-demo.domcloud.dev/
+                Demo Link: https://scheduler-website.domcloud.dev
               </p>
             </a>
 
